Update compass title for clarity

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
     <!-- Screen 1: Compass -->
     <section id="screenCompass">
-      <h1 class="title" id="mainTitle">Choose Your Direction for <span class="year2026">2026</span></h1>
+      <h1 class="title" id="mainTitle">Choose and click your desired direction for <span class="year2026">2026</span></h1>
 
       <div class="compassWrap">
         <div class="compass" aria-label="Compass with four directions">
